@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.5
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed crash when selecting a module before an assembler in the gui
+    - Fixed opening the gui when opening any mod item (RailSignalPlanner, Artillery Bombaredemnt Remote, etc.)
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.4
 Date: 2021-01-06
